--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 mini-redis = "0.4"
 bytes = "1.10.1"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
+serde_json = "1.0"
