--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ bytes = "1.10.1"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "2.0"
 serde_json = "1.0"
+thiserror = "2"
+anyhow = "1.0"
