--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,7 @@ bincode = "2.0"
 serde_json = "1.0"
 thiserror = "2"
 anyhow = "1.0"
+clap = { version = "4.5", features = ["derive"] }
+clap-verbosity-flag = "3.0.2"
+log = "0.4.27"
+env_logger = "0.11.7"
