--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ clap = { version = "4.5", features = ["derive"] }
 clap-verbosity-flag = "3.0.2"
 log = "0.4.27"
 env_logger = "0.11.7"
+signal-hook = "0.3.17"
+colored = "3.0.0"
