--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,7 @@ path = "src/bin/cli.rs"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
-mini-redis = "0.4"
 bytes = "1.10.1"
-serde = { version = "1.0", features = ["derive"] }
-bincode = "2.0"
-serde_json = "1.0"
 thiserror = "2"
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
@@ -31,3 +27,8 @@ env_logger = "0.11.7"
 signal-hook = "0.3.17"
 colored = "3.0.0"
 shlex = "1.3.0"
+
+[dev-dependencies]
+assert_cmd = "2.0.16"
+predicates = "3.1.3"
+testcontainers = "0.23.3"
